# obercloud

./: .gitignore  .tool-versions  LICENSE  README.md  bootstrap.exs  justfile  run_mix_in_server
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: client.rs  config.rs  error.rs  lib.rs  main.rs  output.rs
cli/src/commands/: apikeys.rs  auth.rs  context.rs  mod.rs  nodes.rs  orgs.rs  projects.rs  users.rs
cli/src/commands/bootstrap/: destroy.rs  init.rs  mod.rs  tofu.rs  upgrade.rs
cli/src/commands/bootstrap/templates/: cloud_init.yaml  multi_node.tf  single_node.tf  vultr_multi_node.tf  vultr_single_node.tf
cli/tests/: commands_test.rs  config_test.rs
docs/: INSTALL.md
docs/superpowers/plans/: 2026-04-30-obercloud-p0-control-plane.md
docs/superpowers/specs/: 2026-04-30-obercloud-p0-control-plane-design.md
server/: Dockerfile  README.md  mix.exs
server/apps/obercloud/: .gitignore  README.md  mix.exs
server/apps/obercloud/lib/: obercloud.ex
server/apps/obercloud/lib/obercloud/: accounts.ex  application.ex  auth.ex  control_plane.ex  crypto.ex  mailer.ex  projects.ex  reconciler.ex  release.ex  repo.ex
server/apps/obercloud/priv/repo/: seeds.exs
server/apps/obercloud/test/obercloud/: auth_test.exs  (+4 more)
server/apps/obercloud_web/: .gitignore  README.md  mix.exs
server/apps/obercloud_web/assets/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
server/apps/obercloud_web/lib/: obercloud_web.ex
server/apps/obercloud_web/test/: test_helper.exs
server/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
(+89 files in other folders)
