[package]
name = "obercloud"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "OberCloud control plane CLI"

[[bin]]
name = "obercloud"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.1"
thiserror = "1.0"
anyhow = "1.0"
tempfile = "3.13"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockito = "1.5"
assert_cmd = "2.0"
predicates = "3.1"
